// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.UI.Dialog should render correctly with custom content 1`] = `
<Dialog
  buttons={
    <React.Fragment>
      <ForwardRef
        active={false}
        processing={false}
        size="medium"
        variant="primary"
      >
        Primary
      </ForwardRef>
      <ForwardRef
        active={false}
        processing={false}
        size="medium"
        variant="secondary"
      >
        Secondary
      </ForwardRef>
    </React.Fragment>
  }
  header={
    <ForwardRef
      alignItems="center"
      alignSelf="stretch"
      flexDirection="column"
      mb={3}
    >
      <SvgGlobe
        color="white"
        height={64}
        width={64}
      />
      <Heading2>
        Custom heading
      </Heading2>
    </ForwardRef>
  }
  onClose={[Function]}
  width={550}
>
  <Styled(styled.div)
    alignItems="center"
    flexDirection="column"
  >
    <Text
      fontSize="xl"
    >
      This is a custom body
    </Text>
  </Styled(styled.div)>
</Dialog>
`;

exports[`component.UI.Dialog should render correctly with one button 1`] = `
<Styled(styled.div)
  bg="primaryColor"
  borderRadius={5}
  boxShadow="0 3px 4px 0 rgba(0, 0, 0, 0.5)"
  width={550}
>
  <CloseButton
    onClick={[Function]}
  />
  <Styled(styled.div)
    alignItems="center"
    alignSelf="stretch"
    flexDirection="column"
    justifyContent="center"
    pb={4}
  >
    <Styled(styled.div)
      alignItems="flex-start"
      flexDirection="column"
      justifyContent="center"
    >
      <Heading2
        mb={4}
      >
        Title
      </Heading2>
    </Styled(styled.div)>
    <Styled(styled.div)
      alignSelf="stretch"
      flexDirection="row"
      justifyContent="space-evenly"
      mt={4}
      pl={6}
      pr={6}
    >
      <Button
        active={false}
        key="Ok"
        onClick={[Function]}
        processing={false}
        size="medium"
        variant="primary"
      >
        Ok
      </Button>
    </Styled(styled.div)>
  </Styled(styled.div)>
</Styled(styled.div)>
`;

exports[`component.UI.Dialog should render correctly with two buttons 1`] = `
<Styled(styled.div)
  bg="primaryColor"
  borderRadius={5}
  boxShadow="0 3px 4px 0 rgba(0, 0, 0, 0.5)"
  width={550}
>
  <CloseButton
    onClick={[Function]}
  />
  <Styled(styled.div)
    alignItems="center"
    alignSelf="stretch"
    flexDirection="column"
    justifyContent="center"
    pb={4}
  >
    <Styled(styled.div)
      alignItems="flex-start"
      flexDirection="column"
      justifyContent="center"
    >
      <Heading2
        mb={4}
      >
        Title
      </Heading2>
    </Styled(styled.div)>
    <Styled(styled.div)
      alignSelf="stretch"
      flexDirection="row"
      justifyContent="space-evenly"
      mt={4}
      pl={6}
      pr={6}
    >
      <Button
        active={false}
        key="Delete"
        onClick={[Function]}
        processing={false}
        size="medium"
        variant="primary"
      >
        Delete
      </Button>
      <Button
        active={false}
        key="Cancel"
        onClick={[Function]}
        processing={false}
        size="medium"
        variant="normal"
      >
        Cancel
      </Button>
    </Styled(styled.div)>
  </Styled(styled.div)>
</Styled(styled.div)>
`;
